--- a/client/styles/styles.less
+++ b/client/styles/styles.less
@@ -12,12 +12,11 @@
 }
 
 #vidFrame {
-  object-fit: fill;
   position: absolute;
   // left: 50%;
   top: 0;
-  // width: 150%;
-  height: 103vh;
+  width: 100%;
+  // height: 103vh;
   // margin-left: -75%;
 }
 
